Botao proxima etapa

--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
                     placeholder='Digite e pressione "Enter" para cada dado'
                   />
                 </div>
+                <div class="content-header" style="margin-top: 20px">
+                  <p></p>
+                  <button class="btn-primary" data-page="resultados">
+                    Próxima Etapa
+                  </button>
+                  <p></p>
+                </div>
               </div>
               <div></div>
             </div>
