no input verifier

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </div>
 
       <footer class="app-footer">
-        <p>@Calc</p>
+        <p>@Calculadora</p>
       </footer>
     </div>
 
