Formulas e Tabelas melhores

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
               <div></div>
               <div class="card" style="margin-top: 20px">
                 <h3>Insira os dados</h3>
-                <p>Veja as estatísticas mais recentes da sua conta.</p>
+                <p>Garanta que precionou "Enter" após cada dado.</p>
                 <div class="centered-container">
                   <input
                     type="number"
                     id="dataInput"
                     class="centered-input"
-                    placeholder='Digite e pressione "Enter" para cada dado'
+                    placeholder="Digite um número"
                   />
                 </div>
                 <div class="content-header" style="margin-top: 20px">
@@ -88,7 +88,7 @@
               <div></div>
               <div class="card" style="margin-top: 20px">
                 <h3>Entradas:</h3>
-                <table id="dataEntries" border="1">
+                <table id="dataEntries" border="1" class="blue-table">
                   <tr id="row-placeholder">
                     <td></td>
                     <td></td>
