--- a/index.html
+++ b/index.html
@@ -16,23 +16,6 @@
       </header>
 
       <div class="main-container">
-        <!-- <nav class="sidebar" id="sidebar">
-          <ul class="nav-menu">
-            <li class="nav-item active" data-page="inicio">
-              <a href="#">Início</a>
-            </li>
-            <li class="nav-item active" data-page="dados">
-              <a href="#">Dados</a>
-            </li>
-            <li class="nav-item deactive" data-page="infos">
-              <a href="#">Informações</a>
-            </li>
-            <li class="nav-item deactive" data-page="resultados">
-              <a href="#">Resultados</a>
-            </li>
-          </ul>
-        </nav> -->
-
         <main class="content-area">
           <!-- Página Início -->
           <div class="page" id="inicio">
@@ -54,40 +37,62 @@
           </div>
 
           <!-- Página Dados -->
-          <!-- Tabela -->
           <div class="page active" id="dados">
-            <div class="content-header">
-              <!-- <h2>Dados</h2> -->
-              <!-- <button class="btn-secondary" data-page="inicio">Voltar</button> -->
-            </div>
-
             <div class="cards-row">
               <div class="left-column">
                 <div class="card">
                   <h3>Opções de Entrada</h3>
                   <div class="mode-buttons">
-                    <button class="btn-secondary mini-button" data-page="dados">
+                    <button
+                      class="btn-secondary mini-button"
+                      data-component="tabela"
+                    >
                       Tabela
                     </button>
-                    <button class="btn-secondary" data-page="fi">Fi</button>
-                    <button class="btn-secondary" data-page="classes">
+                    <button class="btn-secondary" data-component="fi">
+                      Frequência Individual
+                    </button>
+                    <button class="btn-secondary" data-component="classes">
                       Classes
                     </button>
+                    <button
+                      id="nova-linha"
+                      class="fi component btn-secondary"
+                      style="
+                        background-color: #4cc95b;
+                        color: white;
+                        font-weight: 800;
+                        margin-top: 50px;
+                      "
+                    >
+                      Nova Linha +
+                    </button>
                   </div>
-                  <h3>Entrada</h3>
-                  <p>Garanta que pressionou "Enter" após cada dado.</p>
-                  <div class="centered-container">
-                    <input
-                      type="number"
-                      id="dataInput"
-                      class="centered-input"
-                      placeholder="Digite um número"
-                    />
+                  <div class="tabela component active">
+                    <h3>Entrada</h3>
+                    <p>Garanta que pressionou "Enter" após cada dado.</p>
+                    <div class="centered-container">
+                      <input
+                        type="number"
+                        id="dataInput"
+                        class="centered-input"
+                        placeholder="Digite um número"
+                      />
+                    </div>
                   </div>
                 </div>
 
                 <div class="card bottom">
-                  <h3>Opções de Cálculo</h3>
+                  <div>
+                    <h3 style="display: inline">Opções de Cálculo:</h3>
+                    <input
+                      id="unidadeInput"
+                      type="text"
+                      placeholder="Tipo de unidade (Cm | Kg | ...):"
+                      class="centered-input"
+                      style="display: inline; margin-bottom: 10px; width: 150px"
+                    />
+                  </div>
                   <div class="task-container">
                     <div class="task" data="media">Media</div>
                     <div class="task" data="moda">Moda/Czuber</div>
@@ -114,8 +119,8 @@
               </div>
 
               <div class="right-column">
-                <div class="card right">
-                  <h3>Entradas:</h3>
+                <h3>Entradas:</h3>
+                <div class="tabela component active">
                   <table
                     id="dataEntries"
                     border="1"
@@ -129,128 +134,57 @@
                     </tr>
                   </table>
                 </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Fi -->
-          <div class="page" id="fi">
-            <div class="content-header">
-              <!-- <h2>Dados</h2>
-              <button class="btn-secondary" data-page="inicio">Voltar</button> -->
-            </div>
-
-            <div class="cards-row">
-              <div class="left-column">
-                <div class="card">
-                  <h3>Opções de Entrada</h3>
-                  <div class="mode-buttons">
-                    <button class="btn-secondary" data-page="dados">
-                      Tabela
-                    </button>
-                    <button class="btn-secondary mini-button" data-page="fi">
-                      Fi
-                    </button>
-                    <button class="btn-secondary" data-page="classes">
-                      Classes
-                    </button>
-                    <button
-                      id="nova-linha"
-                      class="btn-secondary"
-                      style="
-                        background-color: #4cc95b;
-                        color: white;
-                        font-weight: 800;
-                        margin-top: 50px;
-                      "
-                    >
-                      Nova Linha +
-                    </button>
-                  </div>
+                <div class="fi component">
+                  <table id="dataEntriesFi" border="1" class="blue-table">
+                    <tr>
+                      <th>Xi</th>
+                      <th>Fi</th>
+                    </tr>
+                    <tr>
+                      <td>
+                        <input
+                          type="number"
+                          class="centered-input fi-input"
+                          data="0"
+                        />
+                      </td>
+                      <td>
+                        <input
+                          type="number"
+                          class="centered-input fi-input"
+                          data="1"
+                        />
+                      </td>
+                    </tr>
+                  </table>
                 </div>
-
-                <div class="card bottom">
-                  <h3>Opções de Cálculo</h3>
-                  <div class="task-container">
-                    <div class="task">Media</div>
-                    <div class="task">Moda/Czuber</div>
-                    <div class="task">Mediana</div>
-                    <div class="task">Variancia</div>
-                    <div class="task">Coeficiencia de Variacao</div>
-                    <div class="task">Agrupamento Discreto</div>
-                    <div class="task">Desvio Padrao</div>
-                  </div>
-                  <div class="action-buttons">
-                    <button
-                      class="btn-primary"
-                      data-page="resultados"
-                      style="margin-top: 20px"
-                    >
-                      Calcular
-                    </button>
-                  </div>
-                </div>
-              </div>
-
-              <div class="right-column">
-                <div class="card right">
-                  <h3>Entradas:</h3>
-                  <div class="centered-container">
-                    <table id="dataEntriesFi" border="1" class="blue-table">
-                      <tr>
-                        <th>Xi</th>
-                        <th>Fi</th>
-                      </tr>
-                      <tr>
-                        <td>
-                          <input
-                            type="number"
-                            class="centered-input fi-input"
-                            data="0"
-                          />
-                        </td>
-                        <td>
-                          <input
-                            type="number"
-                            class="centered-input fi-input"
-                            data="1"
-                          />
-                        </td>
-                      </tr>
-                    </table>
-                  </div>
+                <div class="classes component">
+                  <table id="dataEntriesFi" border="1" class="blue-table">
+                    <tr>
+                      <th>Li</th>
+                      <th>Ls</th>
+                    </tr>
+                    <tr>
+                      <td>
+                        <input
+                          type="number"
+                          class="centered-input fi-input"
+                          id="0"
+                        />
+                      </td>
+                      <td>
+                        <input
+                          type="number"
+                          class="centered-input fi-input"
+                          id="1"
+                        />
+                      </td>
+                    </tr>
+                  </table>
                 </div>
               </div>
             </div>
           </div>
-
-          <!-- Página Informações
-          <div class="page" id="infos">
-            <div class="content-header">
-              <h2>Informações</h2>
-              <button class="btn-secondary" data-page="dados">Voltar</button>
-            </div>
-
-            <div class="content-header">
-              <div></div>
-              <div class="card">
-                <h3>Informações Desejadas</h3>
-                <div class="task-container">
-                  <div class="task">Média</div>
-                  <div class="task">Moda</div>
-                  <div class="task">Mediana</div>
-                </div>
-                <div class="content-header" style="margin-top: 20px">
-                  <p></p>
-                  <button class="btn-primary" data-page="resultados">
-                    Calcular
-                  </button>
-                  <p></p>
-                </div>
-              </div>
-              <div></div>
-            </div>
-          </div> -->
 
           <!-- Página Resultados -->
           <div class="page" id="resultados">
@@ -262,7 +196,7 @@
             <div class="card-container">
               <div class="card">
                 <h3>Resultados</h3>
-                <button class="btn-secondary" data-page="inicio">
+                <button class="btn-secondary" data-page="dados">
                   Voltar ao início
                 </button>
               </div>
