input li melhorado

--- a/index.html
+++ b/index.html
@@ -144,9 +144,10 @@
                       <td>
                         <input
                           type="number"
-                          class="centered-input fi-input"
+                          class="centered-input fi-input fi-min"
                           data="1"
-                          placeholder="0"
+                          placeholder="1"
+                          min="1"
                         />
                       </td>
                     </tr>
