--- a/index.html
+++ b/index.html
@@ -63,27 +63,30 @@
                   <div class="tabela component active">
                     <div>
                       <h3 style="display: inline">Entrada:</h3>
-                      <button
-                        id="apagar-tabela"
-                        class="btn-secondary"
-                        style="
-                          height: 30px;
-                          background-color: #a2a2a2;
-                          color: white;
-                          font-weight: 800;
-                        "
-                      >
-                        Apagar dados da tabela
-                      </button>
                     </div>
                     <p>Garanta que pressionou "Enter" após cada dado.</p>
-                    <div class="centered-container">
+                    <div class="centered-container" style="margin-top: 5px">
                       <input
                         type="number"
                         id="dataInput"
                         class="centered-input"
                         placeholder="Digite um número"
+                        style="width: 100%"
                       />
+                      <button
+                        id="apagar-tabela"
+                        class="btn-secondary"
+                        style="
+                          height: 45px;
+                          background-color: #ff7161;
+                          color: white;
+                          font-weight: 800;
+                          margin: 0px;
+                          margin-left: 10px;
+                        "
+                      >
+                        Apagar dados
+                      </button>
                     </div>
                   </div>
                 </div>
