--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="fi component">
                   <table id="dataEntriesFi" border="1" class="blue-table">
                     <tr>
-                      <th>Xi</th>
+                      <th id="fi-xi">Xi</th>
                       <th>Fi</th>
                     </tr>
                     <tr>
@@ -207,7 +207,7 @@
 
             <div class="card-container">
               <div class="card">
-                <h3>Resultados</h3>
+                <h3>Resultados: <span id="resultados-texto"></span></h3>
                 <button class="btn-secondary" data-page="dados">
                   Voltar ao início
                 </button>
