--- a/index.html
+++ b/index.html
@@ -97,13 +97,14 @@
                     <input
                       id="unidadeInput"
                       type="text"
-                      placeholder="Tipo de unidade (Cm | Kg | ...):"
+                      placeholder="Unidade de Medida"
                       class="centered-input"
                       style="
                         display: inline;
                         margin-bottom: 10px;
-                        width: 150px;
+                        width: 170px;
                         height: 35px;
+                        font-size: 15px;
                       "
                     />
                   </div>
