--- a/index.html
+++ b/index.html
@@ -59,6 +59,29 @@
                     >
                       Remover Linha -
                     </button>
+                    <button
+                      id="nova-linha-classes"
+                      class="classes component btn-secondary"
+                      style="
+                        background-color: #4cc95b;
+                        color: white;
+                        font-weight: 800;
+                        margin-top: 20px;
+                      "
+                    >
+                      Nova Linha +
+                    </button>
+                    <button
+                      id="remover-linha-classes"
+                      class="classes component btn-secondary"
+                      style="
+                        background-color: #e74c3c;
+                        color: white;
+                        font-weight: 800;
+                      "
+                    >
+                      Remover Linha -
+                    </button>
                   </div>
                   <div class="tabela component active">
                     <div>
@@ -168,7 +191,7 @@
                         <input
                           type="number"
                           class="centered-input fi-input"
-                          id="0"
+                          id="cell-0"
                           placeholder="..."
                         />
                       </td>
@@ -176,7 +199,7 @@
                         <input
                           type="number"
                           class="centered-input fi-input fi-min"
-                          id="1"
+                          id="cell-1"
                           placeholder="..."
                           min="1"
                         />
@@ -192,18 +215,19 @@
                     style="margin-top: 30px"
                   >
                     <tr>
-                      <th colspan="2" class="unidade-texto">Unidade</th>
+                      <th colspan="3" class="unidade-texto">Unidade</th>
                     </tr>
                     <tr>
                       <th>Li</th>
                       <th>Ls</th>
+                      <th>Fi</th>
                     </tr>
                     <tr>
                       <td>
                         <input
                           type="number"
                           class="centered-input class-input"
-                          id="0"
+                          id="class-cell-0"
                           placeholder="..."
                         />
                       </td>
@@ -211,7 +235,15 @@
                         <input
                           type="number"
                           class="centered-input class-input"
-                          id="1"
+                          id="class-cell-1"
+                          placeholder="..."
+                        />
+                      </td>
+                      <td>
+                        <input
+                          type="number"
+                          class="centered-input class-input"
+                          id="class-cell-3"
                           placeholder="..."
                         />
                       </td>
