--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                           type="number"
                           class="centered-input fi-input"
                           id="cell-0"
-                          placeholder="..."
+                          placeholder="0"
                         />
                       </td>
                       <td>
